chnages to about page

--- a/src/css/CarouselPet.css
+++ b/src/css/CarouselPet.css
@@ -39,7 +39,7 @@
 .sub-text {
   color: azure;
 }
-.button-container {
+.button-container-carousel {
   padding: 10px;
   margin: 10px 10px 0 10px;
   background: rgb(223, 105, 223);
