--- a/src/css/DogsforAdoption.css
+++ b/src/css/DogsforAdoption.css
@@ -1,12 +1,14 @@
 .adoption-container{
     background-color: white;
     margin-top: 100px;
+    
 }
 .dog-list-container{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    
 }
 .dog-card{
     margin: 5px;
@@ -25,3 +27,21 @@
     max-width: 100%;
     height: auto
 }
+.button-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: 300px;
+    margin: 20px 80px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.button-container Button{
+    background-color: darkmagenta;
+    border-color: azure;
+}
+.button-container Button:hover{
+    background-color: rgb(226, 172, 226);
+    border-color: darkmagenta;
+}
+
