--- a/src/css/NavigationBar.css
+++ b/src/css/NavigationBar.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: rgb(223, 105, 223);
-    /* background-image: linear-gradient(-90deg,  #DDA0DD 0%, #734F96 100%); */
+   
   }
   
   .nav-item {
@@ -16,9 +16,12 @@
     color: #fff;
     font-weight: bold;
   }
+  .navbar a:hover,
+  .nav-item a:hover{
+    color: rgb(191, 4, 191) ;
+    text-decoration: none;
+  }
   
-  a:hover,
-  .navbar-brand:hover,
   .navbar-nav:hover {
     color: grey;
     text-decoration: none;
@@ -27,3 +30,5 @@
   .navbar-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(299,299,299, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
   }
+
+ 
