--- a/src/css/Account.css
+++ b/src/css/Account.css
@@ -1,5 +1,5 @@
 .account-main-container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   background-image: linear-gradient(
